# spl-forge

./: Cargo.toml  README.md
src/: cli.rs  client.rs  lib.rs  main.rs
src/commands/: config.rs  create.rs  help.rs  mod.rs  wallet.rs
src/common/: error.rs  init.rs  mod.rs  paths.rs  solana_path.rs  theme.rs
tests/: commands_localnet.rs  commands_smoke.rs
