[package]
name = "spl-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A CLI toolkit for creating and managing SPL assets on Solana"
readme = "README.md"
repository = "https://github.com/AaryanNarayani/spl-forge"
homepage = "https://github.com/AaryanNarayani/spl-forge"
documentation = "https://docs.rs/spl-forge"
license = "MIT"
keywords = ["solana", "spl", "cli", "token", "web3"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0.99"
clap = {version = "4.5.45", features = ["derive"]}
colored = "3.0.0"
dirs = "6.0.0"
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.143"
solana-client = "1.18.26"
solana-program = "1.18.26"
solana-sdk = {version = "1.18.26", features = ["full"]}
spl-associated-token-account = {version = "2.3.0", features = ["no-entrypoint"]}
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
tokio = {version = "1.47.1" , features = ["full"]}
